--- a/style.css
+++ b/style.css
@@ -25,10 +25,146 @@ body {
 body {
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
+  
 }
 
+.zbozi {
+    display: flex;
+    flex-wrap: wrap;
+    width: 670px;
+    height: 440px;
+    margin: auto;
+    margin-top: 100px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 3%;
+}
 
-h1 {
+.vizual {
+    background-image: linear-gradient(#06d7c1, #50cc49);
+    width: 335px;
+    height: 440;
+    position: relative;
+    border-radius: 3% 0 0 3%;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.logo {
+    margin: 30px 0 30px 0;
+}
+
+.slogan {
+    font-size: 16px;
     font-weight: 500;
+    color: white;
+}
+
+.bota {
+    position: absolute;
+    bottom: 2px;
+    left: -80px;
+}
+
+.cenovka {
+    position: absolute;
+    bottom: 28px;
+    right: 30px;
+    text-align: right;
+}
+
+.cena {
+    font-size: 28px;
+    font-weight: 500;
+    color: white;
+}
+
+.zaruka {
+    font-size: 12px;
+    font-weight: 400;
+    color: white;
+}
+
+.detaily {
+    width: 335px;
+    height: 440;
+    border-radius: 0 3% 3% 0;
+    padding: 30px 30px 30px 30px;
+    position: relative;
+}
+
+.nazev {
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.produkt {
+    color: grey;
+    margin: 7px 0 0 0;
+}
+
+.popis {
+    font-size: 14px;
+    font-weight: 400;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #06d7c1;
+}
+
+.parametr {
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+
+ul {
+    padding: 0;
+}
+
+.velikosti {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+}
+
+li {
+    padding: 6px;
+}
+
+.vybrana {
+    color: #f15f42;
+    border: 0.5px solid #f15f42;
+    border-radius: 50%;
+}
+
+li:hover {
+    border: 0.5px solid #f15f42;
+    border-radius: 50%;
+    color: #f15f42;
+}
+
+.akce {
+    background-color: #f15f42;
+    border-radius: 5px;
+    padding: 10px;
+    width: 120px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    margin-top: 50px;
+    position: absolute;
+    bottom: 28px;
+    left: 30px;
+}
+
+.tlacitko {
+    color: white;
+    text-decoration: none;
+    margin: auto;
+    text-transform: uppercase;
+}
+
+.akce:hover {
+    background-color: #ee421f;
 }
 
